[metadata]
name = superchat-cli
version = 1.0.9
author = Quinten Roets
author_email = quinten.roets@gmail.com
description = command-line interface for chatgpt
description-file = README.md 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quintenroets/chat
license = MIT

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
package_dir =
    = .
install_requires =
    quinten-cli
    requests
    superpathlib

[options.entry_points]
console_scripts =
    chat = chat:main

[options.packages.find]
where = .

[bdist_wheel]
universal = true
